# TraceSage

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  config.py  ingest.py  pipeline.py  pyproject.toml
examples/: anomaly_spike.jsonl  benchmark_incidents.json  ci_failures.jsonl  deploy_events.jsonl  sample_logs.jsonl
ml/: embeddings.py  summarization.py
tests/: test_clustering.py  test_ingest.py  test_pipeline.py  test_regressions.py
tracesage/: ci.py  cli.py  config.py  domain.py  evaluation.py  gitmeta.py  ingest.py  pipeline.py  storage.py
tracesage/ml/: clustering.py  embeddings.py  summarization.py
tracesage/runtime/: live.py  run.py  watch.py
