[project]
name = "tracesage"
version = "0.1.0"
description = "Semantic log intelligence CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.3",
  "numpy>=2.1.3",
  "pandas>=2.2.3",
  "rich>=13.9.4",
  "scikit-learn>=1.5.2",
  "sentence-transformers>=3.3.1",
  "typer>=0.15.1",
]

[project.scripts]
tracesage = "tracesage.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tracesage*"]
